--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -237,7 +237,6 @@ a {
 }
 
 .nav-bar ul li {
-  width: 120px;
   float: left;
   text-align: center;
   padding: 15px 0;
@@ -288,6 +287,7 @@ a {
 }
 
 .nav-right {
+  margin-right: 30px;
   align-self: center;
   font-weight: bold;
 }
